--- a/www/index.html
+++ b/www/index.html
@@ -171,6 +171,10 @@
             ctx.drawImage(img,0,0,300,300);
         };
 
+        var audio = new Audio();
+        audio.src = "pin.wav";
+        audio.play();
+
 
 
 
