--- a/www/index.html
+++ b/www/index.html
@@ -217,14 +217,19 @@
  
     // 繰り返し実行する処理
     function timer(){ 
-
-        etime = parseInt((new Date() - startTime)/1000);
-        rest = period - etime;
-        $("#time").html("経過時間: " + etime);
-        $("#remain").html("残り時間: " + rest);
-        analog(rest);
-
+        if(active) {
+            etime = parseInt((new Date() - startTime)/1000);
+            rest = period - etime;
+            $("#time").html("経過時間: " + etime);
+            $("#remain").html("残り時間: " + rest);
+            analog(rest);
+            if(rest <= 0) {
+                 active = false;
+                 alarm();
+            }
+        }
         
+
         
     } 
 
